--- a/Results/readme
+++ b/Results/readme
@@ -1,1 +1,3 @@
-This folder contains the results of the final Base model used for the basis of management advice for Alaska sablefish in 2022. The final model is 21.12 as chosen during the 2021 SAFE. It includes iteratively reweighting of the input data sample sizes, which occurs after adding all of the new data for 2022.
+This folder contains the results of the final Base model used for the basis of management advice for Alaska sablefish in 2022. The final model is 21.12 as chosen during the 2021 SAFE. It includes iterative reweighting of the input data sample sizes, which occurs after adding all of the new data for 2022.
+
+The full documentation of model 21.12 can be found in the 2021 SAFE report: https://www.fisheries.noaa.gov/resource/data/2021-assessment-sablefish-stock-alaska.
