--- a/Model/Code/Readme
+++ b/Model/Code/Readme
@@ -1,1 +1,3 @@
-Final sablefish model used for the 2022 stock asssessment
+Final sablefish model used for the 2022 stock asssessment.
+
+R files provide graphic outputs based on outputs of the assessment model.
